SUBDIRS = \
		  Aac2Mp4 \
		  FixAacSampleDescription \
		  Mp42Aac \
		  Mp42Avc \
		  Mp42Hevc \
		  Mp42Hls \
		  Mp42Ts \
		  Mp4AudioClip \
		  Mp4Compact \
		  Mp4DcfPackager \
		  Mp4Decrypt \
		  Mp4Dump \
		  Mp4Edit \
		  Mp4Encrypt \
		  Mp4Extract \
		  Mp4Fragment \
		  Mp4Info \
		  Mp4Mux \
		  Mp4Pssh \
		  Mp4RtpHintInfo \
		  Mp4Split \
		  Mp4Tag
