AM_CXXFLAGS = -I $(top_srcdir)/Source/C++/Core

noinst_LTLIBRARIES = libb4codecs.la

libb4codecs_la_SOURCES = \
						 Ap4AdtsParser.cpp \
						 Ap4AdtsParser.h \
						 Ap4AvcParser.cpp \
						 Ap4AvcParser.h \
						 Ap4BitStream.cpp \
						 Ap4BitStream.h \
						 Ap4HevcParser.cpp \
						 Ap4HevcParser.h \
						 Ap4Mp4AudioInfo.cpp \
						 Ap4Mp4AudioInfo.h \
						 Ap4NalParser.cpp \
						 Ap4NalParser.h
