AM_CXXFLAGS = -I $(top_srcdir)/Source/C++/Core

noinst_LTLIBRARIES = libb4crypto.la

libb4crypto_la_SOURCES = \
						 Ap4AesBlockCipher.cpp \
						 Ap4AesBlockCipher.h \
						 Ap4Hmac.cpp \
						 Ap4Hmac.h \
						 Ap4KeyWrap.cpp \
						 Ap4KeyWrap.h \
						 Ap4StreamCipher.cpp \
						 Ap4StreamCipher.h
